force-app/main/default/objects/Execution_Steps__c/Execution_Steps__c.object-meta.xml
<CustomObject>
    <label>Test Script Steps</label>
    <nameField>
        <displayFormat>Ex-STP-{00000}</displayFormat>
        <label>Step No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Script Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>