force-app/main/default/objects/Execution_Steps__c/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <type>TextArea</type>
</CustomField>