force-app/main/default/objects/Execution_Steps__c/fields/Test_Script_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Script Name</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipName>Execution_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>