force-app/main/default/objects/Execution_Steps__c/fields/User_Login_Details__c.field-meta.xml
<CustomField>
    <fullName>User_Login_Details__c</fullName>
    <label>User Login Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>